[package]
name = "kouik"
version = "0.2.0"
authors = ["Ferry Jérémie <ferryjeremie@free.fr>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="3.1", features=['cargo'] }
diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.15.0"
serde = "1.0"

[build-dependencies]
clap = { version="3.1", features=['cargo']  }
clap_complete = { version="3.1" }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.11.0"
